--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/Hajitsu/projects-management/issues"
   },
-  "homepage": "https://github.com/Hajitsu/projects-management#readme"
+  "homepage": "https://github.com/Hajitsu/projects-management#readme",
+  "dependencies": {
+    "express": "^4.18.1",
+    "mongoose": "^6.4.4"
+  }
 }
